# MRC

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  PRESENTATION.MD  README.md  references.bib
MRC/: .gitignore  index.html  package.json
MRC/database/: chats-1.json  chats-20.json  chats-4.json  chats-8.json  config.json  groups.json
MRC/database/config/: user.json
MRC/src/: App.scss  App.tsx  Counter.tsx  colours.scss
MRC/src-tauri/: Cargo.toml  tauri.conf.json
MRC/src-tauri/database/: chats-1.json  groups.json
MRC/src-tauri/migrations/: 1.sql  tables.sql
MRC/src-tauri/src/: config.rs  database.rs  encoding.rs  encryption.rs  encryption_unique_name.rs  file.rs  groupencoding.rs  hashing.rs  interface.rs  main.rs  meshcom.rs  receiver.rs  serialize.rs  test.json
MRC/src-tauri/src/config/: config_struct.rs  io.rs  mpw.rs  serialization.rs  user.rs
MRC/src-tauri/src/database/: chat.rs  file.rs  group.rs  io.rs
MRC/src-tauri/src/serialize/: chat.rs  file.rs  group.rs
MRC/src/components/: index.jsx
MRC/src/components/button/: Button.scss  index.tsx
MRC/src/components/chat-item/: ChatItem.scss  index.tsx
MRC/src/components/group-item/: GroupItem.scss  index.tsx
MRC/src/components/hamburger-x/: HamburgerX.scss  index.tsx
MRC/src/components/input-field/: InputField.scss  index.tsx
MRC/src/components/panel/: Panel.scss  index.tsx
MRC/src/components/search/: Search.scss  index.tsx
MRC/src/components/settings/: Settings.scss  index.tsx
MRC/src/components/terminal/: Terminal.scss  index.tsx
MRC/src/components/terminal-text/: TerminalText.scss  index.tsx
MRC/src/database/: main.tsx
MRC/src/groupencoding/: Cargo.toml  groupencoding.rs
MRC/src/types/: types.ts
database/: Cargo.toml  package.json
interface/: Cargo.toml  interface.py  interface.rs  interface_async.py  interface_async.rs  main.rs  receiver.py  sender.py
legacy/database/: database.ts
legacy/database/src/: main.rs
legacy/encryption/: Cargo.toml
legacy/encryption/src/: main.rs
legacy/serial/: Cargo.toml
legacy/serial/src/: main.rs
mesh-nw/: platformio.ini
meshtastic/: main.py
serial/: Cargo.toml
serial/src/: main.rs
src/: main.cpp
