[package]
name = "MRC"
version = "0.1.0"
description = "A Tauri App"
authors = [
  "Ilya Claassen, Jake Jongejans, Merijn Laks, Scott Scherpenzeel"
]
license = "GNU Affero PGL"
repository = ""
default-run = "MRC"
edition = "2021"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0", features = ["api-all"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/tauri-plugin-sql", rev = "d8ea61f2cbe2dfc9bf0947bab87b1547dcc945d4", features = [ "sqlite" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[[bin]]
name = "MRC"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
