[package]
name = "MRC"
version = "0.1.0"
description = "A Tauri App"
authors = [
  "Ilya Claassen, Jake Jongejans, Merijn Laks, Scott Scherpenzeel"
]
license = "GNU Affero PGL"
repository = ""
default-run = "MRC"
edition = "2021"
build = "src/build.rs"

[dependencies]
magic-crypt = "3"
nanoid = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0", features = ["api-all"] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[[bin]]
name = "MRC"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
